# ros2_android_examples

./: LICENSE  NOTICE  README.md
ros2_listener_android/: build.gradle  package.xml
ros2_listener_android/src/main/: AndroidManifest.xml
ros2_listener_android/src/main/java/org/ros2/examples/android/listener/: ListenerNode.java  ROS2ListenerActivity.java
ros2_listener_android/src/main/res/layout/: main.xml
ros2_listener_android/src/main/res/values/: strings.xml
ros2_talker_android/: build.gradle  package.xml
ros2_talker_android/src/main/: AndroidManifest.xml
ros2_talker_android/src/main/java/org/ros2/examples/android/talker/: ROS2TalkerActivity.java  TalkerNode.java
ros2_talker_android/src/main/res/layout/: main.xml
ros2_talker_android/src/main/res/values/: strings.xml
