<?xml version="1.0"?>
<package format="2">
  <name>ros2_listener_android</name>
  <version>0.0.0</version>
  <description>Sample listener Android application that exercises the ROS2 API.</description>
  <maintainer email="esteve@apache.org">Esteve Fernandez</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_export_jars</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <buildtool_depend>rosidl_generator_java</buildtool_depend>

  <build_depend>rcljava</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rcljava</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_gradle</build_type>
  </export>
</package>
